--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/tacira/midiatatica">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/tacira/midiatatica">Veja no GitHub</a>
 
-          <h1 id="project_title">Midiatatica</h1>
-          <h2 id="project_tagline">geral</h2>
+          <h1 id="project_title">midiatatica</h1>
+          <h2 id="project_tagline">co-labs</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/tacira/midiatatica/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/tacira/midiatatica/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/tacira/midiatatica/zipball/master">Baixe esse projeto como arquivo .zip</a>
+              <a class="tar_download_link" href="https://github.com/tacira/midiatatica/tarball/master">Baixe esse projeto como arquivo tar.gz</a>
             </section>
         </header>
     </div>
@@ -32,16 +32,32 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Bem-vindx as paginas do GitHub.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>midiatatica.info é um nodo de trabalhos independentes que se conectam em muitos espaços e de muitas formas. os trabalhos do menu de navegação foram realizados de 2003 a 2010 por muitas pessoas e coletivos na intersecção de gênero, arte, mídia, política e comunicação, sempre em diferentes partes do brasil, e muitas vezes, em colaboração internacional. pontos comuns são o uso de tecnologias livres e trabalhos em copyleft ou registrados sob licenças abertas.
 
-<pre><code>$ cd your_repo_root/repo_name
+co-laboraram em diferentes momentos com esta rede:
+
+rizoma.net / [aparelho]-:) / mediasana / upgrade salvador / o inusitado / originais do sample / rádio interferência / g2g / estúdiolivre / metareciclagem (não existe mas continua vivo) / submídia / organismo.br / contratv.net /  crieitivecomo.org / submidialogia / ).( / espaço ystilingue / a classe do novo /  projeto saravá / cybersalon (uk) / waag society e genderchangers (holanda) / sarai e altlawforum (índia) / possible worlds (méxico) / liminar (argentina) / UKE (croácia) / aletta  e jane - servidorxs livres (net)
+
+baixe algumas de nossas publicações
+
+participe de nossa lista de discussão
+
+wikka midiatatica
+
+feito em linux - siempre :)
+mantenedora deste sítio: tati
+	
+
+repositorio coletivo em dev:</p>
+
+<pre><code>$ cd your_repo_root/midiatatica
 $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>Boas viagens.</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
